arrumando contato.css

--- a/html02/contato.html
+++ b/html02/contato.html
@@ -3,25 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="style.css" rel="stylesheet" type="text/css"/>
+    <link href="contato.css" rel="stylesheet" type="text/css"/>
     <title>Victor Paliari</title>
-    <div class="">
-        <img style="width: 200px; border-radius: 200px" src="eu.jpg" alt="victor-paliari-perfil">
-    
 </head>
 <body>
 
-    <header class="nome">
-        <h1> Victor Oliveira Paliari </h1>
-        <h3>Desenvolvedor .NET Full Stack Junior</h3>
-    </header>
-    <br>
-    <ol> 
-        <li>Atualmente estudando REACT, NODE.JS e TAILWIND CSS;</li> 
-        <li>Colaborando com Projeto Integrador - Generation Brasil;</li>     
-        <li>Construindo o Frontend do projeto Blog Pessoal;</li>   
-    </ol>
-    <br> 
+    <section class="nome-section">
+        <div class="foto-perfil">
+            <img style="width: 200px; border-radius: 200px" src="eu.jpg" alt="victor-paliari-perfil">
+        </div>
+        <h1 class="nome"> Victor Oliveira Paliari </h1>
+        <h3 class="biografia">Desenvolvedor .NET Full Stack Junior</h3>
+        <div class="botao-linkedin">
+            <a href="https://www.linkedin.com/in/victorpaliari/" target="_blank"><img src="https://img.shields.io/badge/github-%23121011.svg?style=for-the-badge&logo=github&logoColor=white" target="_blank" alt="link do linkedin"></a> 
+            <div class="botao-github">
+            <a href="https://github.com/victorpaliari" target="_blank"><img src="https://img.shields.io/badge/-LinkedIn-%230077B5?style=for-the-badge&logo=linkedin&logoColor=white" target="_blank" alt="link do github"></a> 
+        </div>
+        </div>
+    </section>
+
     <button onclick="ola()">Para acabar com a zika, aperte esse botão.</button>
     <br>
     <br>
@@ -40,15 +40,6 @@
         <br>
         <button onclick="enviar()">Enviar</button>
     </form>
-
-        <div>
-        <a href="https://github.com/victorpaliari" </a> <h2>Acesse meu github</h2> 
-        <a href="https://www.linkedin.com/in/victorpaliari/"</a> <h2>Acesse meu linkedin</h2>
-        </div>
-
-<br>
-<br>
-<br>
 
 <h3>Linguagens e Ferramentas:</h3>
 <div style="display: inline_block" align="left">
