--- a/html02/index.html
+++ b/html02/index.html
@@ -104,10 +104,11 @@
         <div class="conteudo">
         <img alt="capa-livro-jogadorNumeroUm" src="./assets/jogador1.jpg">
         <div class="button-2">
-        <h3>Em 2045, Wade Watts, assim como o resto da humanidade, prefere a realidade virtual do jogo OASIS ao mundo real. James Halliday, o excêntrico criador do jogo, morre e deixa sua fortuna inestimável para a primeira pessoa que descobrir a chave de um quebra-cabeça diabólico que ele arquitetou. Para vencer, Watts precisa abandonar a existência virtual e experimentar o amor e a realidade.</p>
+        <h3>Jogador Nº 1</h3>
+        <p>Em 2045, Wade Watts, assim como o resto da humanidade, prefere a realidade virtual do jogo OASIS ao mundo real. James Halliday, o excêntrico criador do jogo, morre e deixa sua fortuna inestimável para a primeira pessoa que descobrir a chave de um quebra-cabeça diabólico que ele arquitetou. Para vencer, Watts precisa abandonar a existência virtual e experimentar o amor e a realidade.</p>
         <a class="button" href="https://www.amazon.com.br/Jogador-Número-1-Ernest-Cline/dp/8544103162">Comprar na amazon</a>
         </div>
-            </section>
+    </section>
         </main>
 
         <footer>
